After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760991 - imap-smtp: EnsureCredentials returns TRUE even when smtp-password can't be found and an error is set
imap-smtp: EnsureCredentials returns TRUE even when smtp-password can't be fo...
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-22 15:26 UTC by Debarshi Ray
Modified: 2016-05-03 17:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
imap-smtp: Always return FALSE on failure (4.17 KB, patch)
2016-01-22 15:29 UTC, Debarshi Ray
committed Details | Review
exchange, lastfm: Update the ret variable only when everything is done (2.23 KB, patch)
2016-01-22 15:30 UTC, Debarshi Ray
none Details | Review
exchange, lastfm: Update the ret variable only when everything is done (2.76 KB, patch)
2016-01-22 15:45 UTC, Debarshi Ray
committed Details | Review
lastfm: Don't forget to update the ret variable (823 bytes, patch)
2016-05-03 17:08 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-01-22 15:26:42 UTC
EnsureCredentials is expected to return FALSE when the GError is set. Unfortunately, under certain kinds of failure, this doesn't hold true for the IMAP/SMTP provider. Specifically, if we failed to look up smtp-password, it will return TRUE even if an error has been set.
Comment 1 Debarshi Ray 2016-01-22 15:29:56 UTC
Created attachment 319558 [details] [review]
imap-smtp: Always return FALSE on failure
Comment 2 Debarshi Ray 2016-01-22 15:30:32 UTC
Created attachment 319559 [details] [review]
exchange, lastfm: Update the ret variable only when everything is done
Comment 3 Debarshi Ray 2016-01-22 15:45:00 UTC
Created attachment 319560 [details] [review]
exchange, lastfm: Update the ret variable only when everything is done
Comment 4 Debarshi Ray 2016-01-22 17:37:45 UTC
Pushed to master.

I tried my best. I hope I got it right. :)
Comment 5 Debarshi Ray 2016-05-03 17:07:41 UTC
(In reply to Debarshi Ray from comment #4)
> Pushed to master.
> 
> I tried my best. I hope I got it right. :)

I didn't. :(
Comment 6 Debarshi Ray 2016-05-03 17:08:09 UTC
Created attachment 327247 [details] [review]
lastfm: Don't forget to update the ret variable
Comment 7 Debarshi Ray 2016-05-03 17:19:50 UTC
Comment on attachment 327247 [details] [review]
lastfm: Don't forget to update the ret variable

Pushed to master and gnome-3-20.