imap-smtp: Always return FALSE on failure

Bad things will happen if we set the GError to indicate failure, but
don't return FALSE.

We are setting the ret variable on each intermediate step, and if we
failed to look up smtp-password, it will be set to TRUE, which we will
return even if the GError is set. Let's only update the ret variable
when everything is done.

https://bugzilla.gnome.org/show_bug.cgi?id=760991